# icloud-hs

./: .envrc  .gitignore  ChangeLog.md  README.md  cabal.project  default.nix  dev.nix  fourmolu.yaml  icloud-auth.cabal
.github/workflows/: cabal.yml  nix-ci.yml
app/: CmdLine.hs
attoparsec-cookie/Data/Attoparsec/: Cookie.hs
crypto-srp/Crypto/: SRP.hs
crypto-srp/Crypto/SRP/: Constants.hs  Hashing.hs  PrimeGroup.hs  Random.hs
hstratus/: README.md  hstratus.cabal
hstratus-auth/: README.md  hstratus-auth.cabal
hstratus-auth/app/: CmdLine.hs
hstratus-auth/src-cli/Network/HStratus/Http/: Cli.hs
hstratus-auth/src-internal/Network/HStratus/Internal/: Endpoints.hs  Http.hs  HttpErrors.hs  LoginFSM.hs  PBKDF2.hs  Session.hs  Trust.hs
hstratus-auth/src/Network/HStratus/: Http.hs  Session.hs  Trust.hs
hstratus-auth/src/Network/HStratus/Http/: Common.hs  Endpoints.hs
hstratus-auth/src/Network/HStratus/Internal/Http/: Login.hs  Signin.hs
hstratus-auth/test/HStratus/: ApiLoggerSpec.hs  Examples.hs  HttpMockSpec.hs  LoginFSMSpec.hs  Mock.hs  PBKDF2Spec.hs  SessionSpec.hs  TrustSpec.hs
hstratus-auth/test/HStratus/Http/: CliSpec.hs  EndpointsSpec.hs  ErrorsSpec.hs  HeadersSpec.hs
hstratus-auth/testdata/: login_2sa_test.json  srp_init_ok_test.json
hstratus-drive/: README.md  hstratus-drive.cabal
hstratus-drive/app/: CmdLine.hs
hstratus-drive/src-internal/Network/HStratus/Internal/Drive/: Download.hs  Node.hs  NodeData.hs
hstratus-drive/src/Network/HStratus/: Drive.hs
hstratus-drive/src/Network/HStratus/Drive/: Node.hs
hstratus-drive/test/: Spec.hs
hstratus-drive/test/HStratus/: DriveSpec.hs
hstratus-drive/test/HStratus/Drive/: EndpointsSpec.hs  MutationSpec.hs  NodeSpec.hs  UploadSpec.hs
hstratus-notes/: README.md  hstratus-notes.cabal
hstratus-notes/app/: CmdLine.hs
hstratus-notes/src-internal/Network/HStratus/Internal/Notes/: CloudKit.hs  Decode.hs  Download.hs  Endpoints.hs  Note.hs  NoteData.hs  Proto.hs
hstratus-notes/src/Network/HStratus/: Notes.hs
hstratus-notes/test/HStratus/: NotesSpec.hs
hstratus-notes/test/HStratus/Notes/: CloudKitSpec.hs  DecodeSpec.hs  EndpointsSpec.hs  NoteDataSpec.hs  ProtoSpec.hs
hstratus/app/: Main.hs
hstratus/src/Hstratus/: Cli.hs
hstratus/src/Hstratus/Cli/: Auth.hs  Drive.hs  Notes.hs
hstratus/test/: Spec.hs
hstratus/test/Hstratus/Cli/: AuthSpec.hs  DriveSpec.hs  NotesSpec.hs
icloud-auth/: ChangeLog.md  README.md  icloud-auth.cabal
icloud-auth/app/: CmdLine.hs
icloud-auth/src-cli/Network/HStratus/Http/: Cli.hs
icloud-auth/src-cli/Network/ICloud/Http/: Cli.hs
icloud-auth/src-internal/Network/HStratus/Internal/: Session.hs  Trust.hs
icloud-auth/src-internal/Network/ICloud/Internal/: Endpoints.hs  HttpErrors.hs  PBKDF2.hs  Session.hs  Trust.hs
icloud-auth/src/Network/HStratus/: Http.hs  Session.hs
icloud-auth/src/Network/HStratus/Http/: Common.hs
icloud-auth/src/Network/HStratus/Internal/Http/: Api.hs  Login.hs  Signin.hs
icloud-auth/src/Network/ICloud/: Http.hs  Session.hs
icloud-auth/src/Network/ICloud/Http/: Common.hs  Endpoints.hs
icloud-auth/src/Network/ICloud/Internal/Http/: Api.hs  Login.hs  Signin.hs
icloud-auth/test/: Spec.hs
icloud-auth/test/HStratus/: HttpMockSpec.hs  HttpSpec.hs  LoginFSMSpec.hs  Mock.hs  PBKDF2Spec.hs  TrustSpec.hs
icloud-auth/test/HStratus/Http/: CliSpec.hs
icloud-auth/test/ICloud/: ApiLoggerSpec.hs  HttpMockSpec.hs  Mock.hs  SessionSpec.hs
icloud-auth/test/ICloud/Http/: CliSpec.hs  EndpointsSpec.hs  HeadersSpec.hs
icloud-auth/testdata/: trusted_devices_test.json
icloud-drive/: ChangeLog.md  README.md  hstratus-drive.cabal  icloud-drive.cabal
icloud-drive/app/: CmdLine.hs
icloud-drive/src-internal/Network/HStratus/Internal/Drive/: Download.hs  Endpoints.hs  NodeData.hs
icloud-drive/src-internal/Network/ICloud/Internal/Drive/: Download.hs  Endpoints.hs  Node.hs  NodeData.hs
icloud-drive/src/Network/HStratus/: Drive.hs
icloud-drive/src/Network/HStratus/Drive/: Node.hs
icloud-drive/src/Network/ICloud/: Drive.hs
icloud-drive/src/Network/ICloud/Drive/: Node.hs
icloud-drive/test/: Spec.hs
icloud-drive/test/HStratus/Drive/: EndpointsSpec.hs  UploadSpec.hs
icloud-drive/test/ICloud/: DriveSpec.hs
icloud-drive/test/ICloud/Drive/: AppLibrarySpec.hs  EndpointsSpec.hs  MutationSpec.hs  NodeSpec.hs  UploadSpec.hs
icloud-notes/: ChangeLog.md  README.md  hstratus-notes.cabal  icloud-notes.cabal
icloud-notes/app/: CmdLine.hs
icloud-notes/src-internal/Network/HStratus/Internal/Notes/: Download.hs
icloud-notes/src-internal/Network/ICloud/Internal/Notes/: CloudKit.hs  Decode.hs  Download.hs  Endpoints.hs  Note.hs  NoteData.hs  Proto.hs
icloud-notes/src/Network/HStratus/Notes/: Note.hs
icloud-notes/src/Network/ICloud/: Notes.hs
icloud-notes/src/Network/ICloud/Notes/: Note.hs
icloud-notes/test/: Spec.hs
icloud-notes/test/HStratus/Notes/: DecodeSpec.hs  EndpointsSpec.hs  NoteDataSpec.hs
icloud-notes/test/ICloud/: NotesSpec.hs
icloud-notes/test/ICloud/Notes/: CloudKitSpec.hs  DecodeSpec.hs  EndpointsSpec.hs  NoteDataSpec.hs  ProtoSpec.hs
src-internal/Network/ICloud/: PBKDF2.hs
src-internal/Network/ICloud/Http/: Internal.hs
src-internal/Network/ICloud/Internal/: Endpoints.hs  Http.hs  HttpErrors.hs  LoginFSM.hs  PBKDF2.hs  Session.hs  Trust.hs
src-internal/Network/ICloud/Session/: Internal.hs
src-internal/Network/ICloud/Trust/: Internal.hs
src/Network/ICloud/: Auth.hs  Http.hs  KDF.hs  PBKDF2.hs  Session.hs  Trust.hs
src/Network/ICloud/Http/: CookieJar.hs  Endpoints.hs  Errors.hs
src/Network/ICloud/Http/Endpoints/: Internal.hs
src/Network/ICloud/Internal/: LoginFSM.hs
test/: Spec.hs
test/Crypto/: SRPSpec.hs
test/ICloud/: ApiLoggerSpec.hs  AuthSpec.hs  Examples.hs  HttpMockSpec.hs  HttpSpec.hs  KDFSpec.hs  LoginFSMSpec.hs  Mock.hs  PBKDF2Spec.hs  SessionSpec.hs  TrustSpec.hs
test/ICloud/Http/: ErrorsSpec.hs  HeadersSpec.hs
testdata/: auth_ok_test.json  login_2fa_test.json  login_working_test.json  trust_data_test.json
