cabal-version:      3.0
name:               icloud-auth
version:            0.1.0.0
synopsis:           `icloud-auth` allows logon to iCloud servers
description:
  `icloud-auth` allows logon to iCloud servers

  Upon provision of a username and password, it retrieves and stores an
  authorization token, for use in programmatic sessions with other iCloud
  services.

  It is unofficial, i.e, *not* supported by Apple, and not guaranteed to work -
  use at your own risk
build-type:         Simple
extra-source-files:
  ChangeLog.md
data-files: testdata/*_test.json

source-repository head
  type:     git
  location: https://github.com/adetokunbo/icloud-auth.git

library
  exposed-modules:  Network.ICloud.Http
                    Network.ICloud.Internal.LoginFSM
                    Network.ICloud.PBKDF2
                    Network.ICloud.Session
  other-modules:    Data.Attoparsec.Cookie
                    Crypto.SRP
                    Crypto.SRP.Constants
                    Crypto.SRP.PrimeGroup
                    Crypto.SRP.Hashing
                    Crypto.SRP.Random
  hs-source-dirs:   src attoparsec-cookie crypto-srp
  build-depends:
    , aeson                >=1.5.1 && <2.3 
    , aeson-casing         >=0.1 && <0.3
    , attoparsec           >=0.14.4 && <0.15
    , base                 >=4.12 && <5
    , base16-bytestring    >=1.0 && <1.1
    , base64               >=0.4 && <1.2
    , bytestring           >=0.10.8 && <0.11 || >=0.11.3 && <0.13
    , case-insensitive     >=1.2 && <1.3
    , cryptohash-sha1      >=0.11 && <0.12
    , cryptohash-sha256    >=0.11 && <0.12
    , cryptohash-sha512    >=0.11 && <0.12
    , directory            >=1.3 && <1.4
    , entropy              >=0.3.7 && <0.5
    , filepath             >=1.4 && <1.6
    , fmt                  >=0.6.3  && <0.8
    , http-client          >=0.5 && <0.8
    , http-client-tls      >=0.3 && <0.4
    , http-types           >=0.12.1 && <0.13
    , random               >=1.1 && <1.4
    , string-conv          >=0.1 && <0.3
    , text                 >=1.2.3 && <2.2
    , time                 >=1.8 && <1.15
    , uuid                 >=1.3 && <1.4
    , unicode-transforms   >=0.3 && <0.3.7 || >=0.3.7.1 && < 0.5 
    , xdg-basedir          >=0.2 && <0.3

  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test crypto-srp
  autogen-modules:  Paths_icloud_auth
  other-modules:    ICloud.Examples
                    ICloud.HttpSpec
                    ICloud.PBKDF2Spec
                    ICloud.SessionSpec
                    Crypto.SRPSpec
                    Crypto.SRP
                    Crypto.SRP.Constants
                    Crypto.SRP.PrimeGroup
                    Crypto.SRP.Hashing
                    Crypto.SRP.Random
                    Paths_icloud_auth
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cryptohash-sha1      >=0.11 && <0.12
    , cryptohash-sha256    >=0.11 && <0.12
    , cryptohash-sha512    >=0.11 && <0.12
    , directory            >=1.3.6  && <1.5
    , entropy              >=0.3.7 && <0.5
    , fmt
    , hspec                >=2.1 && < 3.0
    , http-types
    , QuickCheck           >= 2.13 && < 2.16
    , temporary            >= 1.2 && < 1.4
    , icloud-auth
    , string-conv
    , text
    , unicode-transforms   >=0.3 && <0.3.7 || >=0.3.7.1 && < 0.5 

