cabal-version:      3.0
name:               icloud-auth
version:            0.1.0.0
synopsis:           `icloud-auth` allows logon to iCloud servers
description:
  `icloud-auth` allows logon to iCloud servers

  Upon provision of a username and password, it retrieves and stores an
  authorization token, for use in programmatic sessions with other iCloud
  services.

  It is unofficial, i.e, *not* supported by Apple, and not guaranteed to work -
  use at your own risk
build-type:         Simple
extra-source-files:
  ChangeLog.md
data-files: testdata/*_test.json

source-repository head
  type:     git
  location: https://github.com/adetokunbo/icloud-auth.git

library
  exposed-modules:  Network.ICloud.Http
                    Network.ICloud.Http.CookieJar
                    Network.ICloud.Http.Endpoints
                    Network.ICloud.Http.Errors
                    Network.ICloud.Internal.LoginFSM
                    Network.ICloud.PBKDF2
                    Network.ICloud.Session
                    Network.ICloud.Trust
  other-modules:    Data.Attoparsec.Cookie
  hs-source-dirs:   src attoparsec-cookie
  build-depends:
    , aeson                >=1.5.1 && <2.3 
    , aeson-casing         >=0.1 && <0.3
    , attoparsec           >=0.14.4 && <0.15
    , base                 >=4.12 && <5
    , base16-bytestring    >=1.0 && <1.1
    , base64               >=0.4 && <1.2
    , bytestring           >=0.10.8 && <0.11 || >=0.11.3 && <0.13
    , case-insensitive     >=1.2 && <1.3
    , containers           >=0.6 && <0.8
    , crypto-srp           >=0.1 && <0.2
    , cryptohash-sha256    >=0.11 && <0.12
    , directory            >=1.3 && <1.4
    , filepath             >=1.4 && <1.6
    , fmt                  >=0.6.3  && <0.8
    , http-client          >=0.5 && <0.8
    , http-client-tls      >=0.3 && <0.4
    , http-types           >=0.12.1 && <0.13
    , random               >=1.1 && <1.4
    , simple-prompt        >=0.2 && <0.3
    , string-conv          >=0.1 && <0.3
    , text                 >=1.2.3 && <2.2
    , time                 >=1.8 && <1.15
    , transformers         >=0.5 && <0.7
    , uuid                 >=1.3 && <1.4
    , xdg-basedir          >=0.2 && <0.3

  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  autogen-modules:  Paths_icloud_auth
  other-modules:    ICloud.Examples
                    ICloud.HttpSpec
                    ICloud.Http.ErrorsSpec
                    ICloud.PBKDF2Spec
                    ICloud.SessionSpec
                    ICloud.TrustSpec
                    Paths_icloud_auth
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , containers
    , cryptohash-sha1      >=0.11 && <0.12
    , cryptohash-sha256    >=0.11 && <0.12
    , cryptohash-sha512    >=0.11 && <0.12
    , crypto-srp           >=0.1 && <0.2
    , directory            >=1.3.6  && <1.5
    , hspec                >=2.1 && < 3.0
    , http-types
    , QuickCheck           >= 2.13 && < 2.16
    , temporary            >= 1.2 && < 1.4
    , icloud-auth
    , silently             >= 1.2 && < 1.3
    , string-conv
    , text
    , main-tester          >= 0.2 && < 0.3

