cabal-version:      3.0
name:               hstratus
version:            0.1.0.0
synopsis:           Unified CLI for iCloud services
description:
  A single @hstratus@ executable with subcommands for iCloud authentication,
  Drive, and Notes.

license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Tim Emiola <adetokunbo@emio.la>
category:           Network
build-type:         Simple
tested-with:
    GHC == 9.2.8
  , GHC == 9.4.8
  , GHC == 9.6.7
  , GHC == 9.8.4
  , GHC == 9.10.2
  , GHC == 9.12.1

source-repository head
  type:     git
  location: https://github.com/adetokunbo/icloud-hs.git

library
  exposed-modules:
    Hstratus.Cli
    Hstratus.Cli.Auth
  hs-source-dirs:   src
  build-depends:
    , base                 >=4.12 && <5
    , directory            >=1.3 && <1.4
    , filepath             >=1.4 && <1.6
    , hstratus-auth
    , hstratus-auth:hstratus-auth-cli
    , http-client-tls      >=0.3 && <0.4
    , optparse-applicative >=0.18 && <0.19
    , xdg-basedir          >=0.2 && <0.3
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

executable hstratus
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  build-depends:
    , base     >=4.12 && <5
    , hstratus

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Hstratus.Cli.AuthSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , base                 >=4.12 && <5
    , hspec                >=2.1 && <3.0
    , hstratus
    , optparse-applicative >=0.18 && <0.19
