cabal-version:      3.0
name:               hstratus-notes
version:            0.1.0.0
synopsis:           Access iCloud Notes (unofficial)
description:
  Browse notes and folders from iCloud Notes using an authenticated session
  from the @hstratus-auth@ library.

  Provides read-only access to the Notes CloudKit database: listing folders,
  fetching recent notes, and downloading note content.

  This library is unofficial and not supported by Apple. It may break
  without warning if Apple changes their API.

license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Tim Emiola <adetokunbo@emio.la>
category:           Network
build-type:         Simple
tested-with:
    GHC == 9.2.8
  , GHC == 9.4.8
  , GHC == 9.6.7
  , GHC == 9.8.4
  , GHC == 9.10.2
  , GHC == 9.12.1
extra-doc-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/icloud-hs.git
  subdir:   icloud-notes

executable hstratus-notes
  main-is:          CmdLine.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  build-depends:
    , base                 >=4.12 && <5
    , directory            >=1.3 && <1.4
    , filepath             >=1.4 && <1.6
    , http-client-tls      >=0.3 && <0.4
    , hstratus-auth
    , hstratus-auth:hstratus-auth-cli
    , hstratus-notes
    , optparse-applicative >=0.18 && <0.19
    , text                 >=1.2.3 && <2.2

library hstratus-notes-internal
  exposed-modules:
    Network.HStratus.Internal.Notes.CloudKit
    Network.HStratus.Internal.Notes.Decode
    Network.HStratus.Internal.Notes.Download
    Network.HStratus.Internal.Notes.Endpoints
    Network.HStratus.Internal.Notes.Note
    Network.HStratus.Internal.Notes.NoteData
    Network.HStratus.Internal.Notes.Proto
  hs-source-dirs:   src-internal
  build-depends:
    , aeson                >=2.0   && <2.3
    , base                 >=4.12 && <5
    , base64-bytestring    >=1.0 && <2.0
    , bytestring           >=0.10.8 && <0.11 || >=0.11.3 && <0.13
    , containers           >=0.6 && <0.8
    , http-client          >=0.5 && <0.8
    , http-types           >=0.12.1 && <0.13
    , hstratus-auth
    , proto3-suite         >=0.7 && <0.11
    , proto3-wire          >=1.0 && <2.0
    , text                 >=1.2.3 && <2.2
    , time                 >=1.9 && <1.15
    , zlib                 >=0.6 && <0.8
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

library
  exposed-modules:
    Network.HStratus.Notes
    Network.HStratus.Notes.Note
  hs-source-dirs:   src
  build-depends:
    , base                         >=4.12 && <5
    , bytestring                   >=0.10.8 && <0.11 || >=0.11.3 && <0.13
    , hstratus-auth
    , hstratus-notes:hstratus-notes-internal
    , text                         >=1.2.3 && <2.2
    , time                         >=1.9 && <1.15
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    HStratus.Notes.CloudKitSpec
    HStratus.Notes.DecodeSpec
    HStratus.Notes.EndpointsSpec
    HStratus.Notes.NoteDataSpec
    HStratus.Notes.ProtoSpec
    HStratus.NotesSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , aeson                        >=2.0   && <2.3
    , base
    , bytestring                   >=0.10.8 && <0.11 || >=0.11.3 && <0.13
    , containers                   >=0.6 && <0.8
    , hspec                        >=2.1 && <3.0
    , http-client                  >=0.5 && <0.8
    , http-types                   >=0.12.1 && <0.13
    , hstratus-auth
    , hstratus-notes
    , hstratus-notes:hstratus-notes-internal
    , temporary                    >=1.2 && <1.4
    , text                         >=1.2.3 && <2.2
    , time                         >=1.9 && <1.15
    , wai                          >=3.2 && <3.3
    , warp                         >=3.2 && <3.5
